# openapi.yaml
@@ -30,6 +30,15 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Game'
+    post:
+      description: Adds new game
+      requestBody:
+        description: JSON object of game
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Game'
 
   /games/{gameId}:
     get:
@@ -133,6 +142,8 @@ components:
       type: object
       properties:
         id:
+          type: string
+        name:
           type: string
         interval:
           type: number
